[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/HUD/Start.gd" type="Script" id=1]
[ext_resource path="res://Font/BebasNeue-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Main/Background1Red.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_accept"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GameNameLabel" type="Label" parent="."]
modulate = Color( 0.0823529, 0.803922, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 140.0
margin_right = 400.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 1 )
text = "Flimsy Whimsy Adventure"
align = 1

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.34
margin_top = 109.147
margin_right = 106.66
margin_bottom = 169.147
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.34
margin_top = 230.0
margin_right = 106.66
margin_bottom = 290.0
custom_fonts/font = SubResource( 2 )
text = "Help"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.34
margin_top = 350.0
margin_right = 106.66
margin_bottom = 410.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Quit"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -10.0
margin_right = 110.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBackground" type="CanvasLayer" parent="."]
layer = -1

[node name="GameNameBackground" type="Panel" parent="LabelBackground"]
modulate = Color( 0.0470588, 1, 0.0627451, 1 )
margin_left = 120.0
margin_top = 140.0
margin_right = 680.0
margin_bottom = 210.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
